[gd_scene load_steps=4 format=3 uid="uid://cn7j4ffut7kqp"]

[ext_resource type="Script" path="res://scripts/intro.gd" id="1_hi8g7"]
[ext_resource type="Texture2D" uid="uid://c2pt8yqf1gwqu" path="res://assets/letter_back.jpg" id="1_p7lag"]
[ext_resource type="Script" path="res://scripts/fancy_button.gd" id="3_x685t"]

[node name="Intro" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hi8g7")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_p7lag")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "There will be text"
fit_content = true

[node name="PageLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Page 1/1"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PrevButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "< Prev"
script = ExtResource("3_x685t")

[node name="NextButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Next >"
script = ExtResource("3_x685t")

[node name="CloseButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Close"
script = ExtResource("3_x685t")
